[gd_scene load_steps=2 format=3 uid="uid://b2edxw40jl47a"]

[ext_resource type="Script" path="res://core/main_menu/main_menu.gd" id="1_wqa5x"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wqa5x")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = -33.0
offset_right = 22.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="New" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "NEW"

[node name="Join" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "JOIN"

[connection signal="pressed" from="VBoxContainer/New" to="." method="_on_new_pressed" flags=3]
[connection signal="pressed" from="VBoxContainer/Join" to="." method="_on_join_pressed" flags=3]
